<resources>
    <string name="app_name">Product Explorer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="product_image">Product image</string>
    <string name="_0_00">$56.60</string>
    <string name="soft_element_jack">Soft Element Jack</string>
    <string name="discover_products">Discover \nProducts</string>
    <string name="settings">settings</string>
    <string name="sofas">Sofas</string>
    <string name="bag">Bag</string>
    <string name="star">star</string>
    <string name="_4_8">4.8</string>
    <string name="_no_of_reviews">%1$d reviews</string>
    <string name="the_inspiration_for_the_design_of_this_bag_comes_from_the_industrial_style_of_the_first_half_of_the_last_century_which_is_complemented_by_the_most_modern_features">The inspiration for the design of this bag comes from the industrial style of the first half of the last century, which is complemented by the most modern features.</string>
    <string name="_4">4</string>
    <string name="price_label">$%1$.2f</string>
    <string name="_1f">%.1f</string>
</resources>